- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler

deleted files:
- presol_implfree removed

SCIP version 5.0.1
==================

performance improvements:
- increased threshold when to scale up cuts that are generated by nonlinear constraint handlers
- disable disaggregation of quadratic constraints by changing the default for constraints/quadratic/maxdisaggrsize to 1
  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)
- test additional scaling factors in CMIR cut generatio heuristic
- cleaned up implementation of the cut selection procedure and added new cut quality measure
- use random tie-breaking in cut selection

features:
- allow output of lower bounds for visualization
- add number of conflict constraints found by diving heuristics to statistics
- added symmetry detection for linking constraints
- SCIP executable handles the SIGTERM signal. If the process receives a SIGTERM, SCIP terminates the solution process with a new SCIP_STATUS code
   "SCIP_STATUS_TERMINATE" and displays all relevant statistics before exiting.

new parameters:
- new parameter "visual/displb" that enables output of lower bounds for visualization

deleted and modified parameters:
- rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"

interface changes:
- new SCIP_STATUS code "SCIP_STATUS_TERMINATE" and methods SCIPtryTerminate() and SCIPterminated() in scip/interrupt.h for handling
   of SIGTERM signals.
- new function SCIPselectCuts() to run SCIP's cut selection procedure on a given array of cuts

new parameters: